<resources>
    <string name="app_name">rleamreader</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_read">Read</string>
    <string name="title_mem">Memorize</string>
    <string name="buttonSignIn">Sign In </string>
    <string name="buttonRegister">Register</string>
    <string name="enter_password">Enter your password:</string>
    <string name="enter_user">Enter your username:</string>
    <string name="create_password">Create your password: </string>
    <string name="create_user">Create your username:</string>



</resources>